WIP homepage link fixes

--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -34,7 +34,7 @@
                             <ul class="table mx-auto">
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/models/import-export-models.adoc')}}}">Export a model in JSON</a></li>
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/schemas/schemas-overview.adoc')}}}">Manage design schemas</a></li>
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#"></a>Generate Avro</li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/code/generate-code-overview.adoc')}}}">Generate Avro</a></li>
                             </ul>
                         </div>
                     </div>
