--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -13,21 +13,21 @@
               <!-- Footer Menu -->
               <div class="px-4">
                 <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Why oNote?</div>                                                                 
-                  <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-77 menu-item-has-children ">
-                    <a href="https://onote.com//features/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-111 menu-item-has-children">
-                        Features
-                    </a>
-                  </div>
-                  <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-77 menu-item-has-children ">
-                    <a href="https://onote.com/use-cases" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-custom menu-item-object-custom menu-item-75 menu-item-has-children">
-                        Use Cases
-                    </a>
+                <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-77 menu-item-has-children ">
+                  <a href="https://onote.com/features/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-111 menu-item-has-children">
+                      Features
+                  </a>
                 </div>
+                {{!-- <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-77 menu-item-has-children ">
+                  <a href="https://onote.com/use-cases" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-custom menu-item-object-custom menu-item-75 menu-item-has-children">
+                      Use Cases
+                  </a>
+                </div> --}}
               </div>
                           
-              <a href="https://onote.com//docs" class="no-underline p-4 text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out ">
+              {{!-- <a href="docs.onote.com" class="no-underline p-4 text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out ">
                   Docs
-              </a>
+              </a> --}}
               <div class="px-4">
                 <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Learn</div>                                                                
                 <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-78 menu-item-has-children ">
@@ -43,33 +43,30 @@
               </div>
                           
               <div class="px-4">
-                <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Service &amp; Support</div>
-                                                                    
-                <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-79 menu-item-has-children ">
-                  <a href="https://onote.com//faq/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-224">
+                <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Service &amp; Support</div>                                                                   
+                {{!-- <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-79 menu-item-has-children ">
+                  <a href="https://onote.com/faq/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-224">
                       FAQ
                   </a>
-                </div>
+                </div> --}}
                 <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-79 menu-item-has-children ">
                   <a href="https://support.onote.com/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-custom menu-item-object-custom menu-item-270">
                       Support
                   </a>
                 </div>
-            </div>
-                          
+            </div>                         
             <div class="px-4">
               <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Company</div>
-                                                                    
-                <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-80 menu-item-has-children ">
-                  <a href="https://onote.com//team/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-61">
-                      Team
-                  </a>
-                </div>
-                <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-80 menu-item-has-children ">
-                  <a href="https://onote.com//contact/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-265">
-                      Contact
-                  </a>
-                </div>
+              <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-80 menu-item-has-children ">
+                <a href="https://onote.com/team/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-61">
+                    Team
+                </a>
+              </div>
+              <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-80 menu-item-has-children ">
+                <a href="https://onote.com/contact/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-265">
+                    Contact
+                </a>
+              </div>
             </div>                         
           </div>
         </div>
