UI bundle update

--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -34,7 +34,7 @@
                             <h2 class="text-center mb-4 whitespace-nowrap">2. Implement</h2>
                             <ul class="table mx-auto">
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/models/import-export-models.adoc')}}}#export-event-model-json">Export a model in JSON</a></li>
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/code/generate-code-overview.adoc')}}}">Generate Avro</a></li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/code/generate-avro.adoc')}}}">Generate Avro</a></li>
                             </ul>
                         </div>
                     </div>
