--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -25,7 +25,7 @@
   <nav class="relative">
     <div class="lg:px-8 px-4 pt-2 lg:pb-4 pb-2">
       <div class="flex justify-between items-center">
-        <a class="" href="{{{or site.url (or siteRootUrl siteRootPath)}}}">
+        <a class="" href="https://onote.com">
           <img src="{{{uiRootPath}}}/img/onoteDocsLogo.svg" alt="oNote" width="161.13" height="auto" />
         </a>
         {{!-- <form class="hidden lg:block">
