--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -10,11 +10,19 @@
               all_links[i].className += " active";
           }
       }
-  }
+      
+      // active class on navbar link when nav link clicked
+      var trigger = document.querySelector(".nav-link")
+      var el = document.querySelector("#onoteUserGuide")
+
+      trigger.addEventListener("click", function () {
+        el.style.display = "hidden"
+      })
+}
 </script>
 <style>
  @media (min-width: 1024px) {
-  .navbar-link.active { 
+  .active { 
     color: #2FB6E1 !important;
     border-bottom: 2px solid #2FB6E1 !important;
   }
@@ -25,7 +33,7 @@
   <nav class="relative">
     <div class="lg:px-8 px-4 pt-2 lg:pb-4 pb-2">
       <div class="flex justify-between items-center">
-        <a class="" href="https://onote.com">
+        <a class="" href="https://onote.com/">
           <img src="{{{uiRootPath}}}/img/onoteDocsLogo.svg" alt="oNote" width="161.13" height="auto" />
         </a>
         {{!-- <form class="hidden lg:block">
@@ -47,12 +55,12 @@
       <div class="w-full flex justify-between items-center">
         <ul id="docsMenu" class="text-sm lg:flex">
           <li class="navbar-item lg:mr-8">
-            <a class="navbar-link border-0 box-border lg:border-b-2 lg:border-white lg:focus:text-secondary lg:focus:border-secondary lg:active:text-secondary lg:active:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" 
+            <a class="navbar-link border-0 box-border lg:border-b-2 lg:border-white mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" 
               {{!-- href="{{{or site.url (or siteRootUrl siteRootPath)}}}"><p class="pb-4">Home</p></a> --}}
               href="{{{relativize (resolvePageURL 'onote-docs::home.adoc')}}}"><p class="pb-4">Home</p></a>
           </li>
           <li class="navbar-item lg:mr-8">
-            <a class="navbar-link border-0 box-border lg:border-b-2 lg:border-white lg:focus:text-secondary lg:focus:border-secondary lg:active:text-secondary lg:active:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" 
+            <a id="onoteUserGuide" class="navbar-link border-0 box-border lg:border-b-2 lg:border-white mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" 
               href="{{{relativize (resolvePageURL 'onote-docs::index.adoc')}}}">
               <p class="pb-4">oNote User Guide</p></a>
           </li>
@@ -70,5 +78,3 @@
     </div>
   </nav>
 </header>
-
-
