header navigation bug fix

--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -1,3 +1,9 @@
+<script>
+  window.onload = function() { 
+    var element = document.getElementById("home");
+    element.classList.add("active");
+}
+</script>
 <div class="home">
     <main class="container h-screen lg:max-w-[1280px] mx-auto h-auto relative py-16">
         <div class="px-4">
