--- a/src/partials/body.hbs
+++ b/src/partials/body.hbs
@@ -1,3 +1,9 @@
+<script>
+  window.onload = function() { 
+    var element = document.getElementById("onoteUserGuide");
+    element.classList.add("active");
+}
+</script>
 <div class="body">
 {{> nav}}
 {{> main}}
