--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,25 +1,3 @@
-<script>
-  window.onload = function() { 
-      var all_links = document.getElementById("docsMenu").getElementsByTagName("a"),
-          i=0, len=all_links.length,
-          full_path = location.href.split('#')[0]; //Ignore hashes?
-
-      // Loop through each link.
-      for(; i<len; i++) {
-          if(all_links[i].href.split("#")[0] == full_path) {
-              all_links[i].className += " active";
-          }
-      }
-      
-      // active class on navbar link when nav link clicked
-      var trigger = document.querySelector(".nav-link")
-      var el = document.querySelector("#onoteUserGuide")
-
-      trigger.addEventListener("click", function () {
-        el.style.display = "hidden"
-      })
-}
-</script>
 <style>
  @media (min-width: 1024px) {
   .active { 
@@ -54,7 +32,7 @@
     <div id="topbar-nav" class="navbar-menu px-8">
       <div class="w-full flex justify-between items-center">
         <ul id="docsMenu" class="text-sm lg:flex">
-          <li class="navbar-item lg:mr-8">
+          <li id="home" class="navbar-item lg:mr-8">
             <a class="navbar-link border-0 box-border lg:border-b-2 lg:border-white mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" 
               {{!-- href="{{{or site.url (or siteRootUrl siteRootPath)}}}"><p class="pb-4">Home</p></a> --}}
               href="{{{relativize (resolvePageURL 'onote-docs::home.adoc')}}}"><p class="pb-4">Home</p></a>
