--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -1,7 +1,7 @@
 .doc {
   color: var(--doc-font-color);
   font-size: calc(16/var(--rem-base)*1rem);
-  hyphens: auto;
+  hyphens: none;
   line-height: var(--doc-line-height);
   margin: var(--doc-margin);
   max-width: var(--doc-max-width);
