--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -23,7 +23,7 @@
                             <ul class="table mx-auto">
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/models/create-event-model.adoc')}}}">Create an event model tutorial</a></li>
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/schemas/schemas-overview.adoc')}}}">Manage Schemas</a></li>
-                                {{!-- <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/collab/collaboration-overview.adoc')}}}">Collaborate on a model design</a></li> --}}
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/collab/collaboration-overview.adoc')}}}">Collaborate on a model design</a></li>
                             </ul>
                         </div>
                     </div>
