--- a/src/css/typeface-roboto.css
+++ b/src/css/typeface-roboto.css
@@ -2,9 +2,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src:
-    local("Roboto Regular"),
-    local("Roboto-Regular"),
+  src: local("Roboto Regular"), local("Roboto-Regular"),
     url(~typeface-roboto/files/roboto-latin-400.woff2) format("woff2"),
     url(~typeface-roboto/files/roboto-latin-400.woff) format("woff");
 }
@@ -13,9 +11,7 @@
   font-family: "Roboto";
   font-style: italic;
   font-weight: 400;
-  src:
-    local("Roboto Italic"),
-    local("Roboto-Italic"),
+  src: local("Roboto Italic"), local("Roboto-Italic"),
     url(~typeface-roboto/files/roboto-latin-400italic.woff2) format("woff2"),
     url(~typeface-roboto/files/roboto-latin-400italic.woff) format("woff");
 }
@@ -24,9 +20,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
-  src:
-    local("Roboto Medium"),
-    local("Roboto-Medium"),
+  src: local("Roboto Medium"), local("Roboto-Medium"),
     url(~typeface-roboto/files/roboto-latin-500.woff2) format("woff2"),
     url(~typeface-roboto/files/roboto-latin-500.woff) format("woff");
 }
@@ -35,9 +29,7 @@
   font-family: "Roboto";
   font-style: italic;
   font-weight: 500;
-  src:
-    local("Roboto Medium Italic"),
-    local("Roboto-MediumItalic"),
+  src: local("Roboto Medium Italic"), local("Roboto-MediumItalic"),
     url(~typeface-roboto/files/roboto-latin-500italic.woff2) format("woff2"),
     url(~typeface-roboto/files/roboto-latin-500italic.woff) format("woff");
 }
