--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -1,5 +1,5 @@
 <script>
-  window.onload = function() { 
+  window.onload = function() {
     var element = document.getElementById("home");
     element.classList.add("active");
 }
@@ -7,11 +7,11 @@
 <div class="home">
     <main class="container h-screen lg:max-w-[1280px] mx-auto h-auto relative py-16">
         <div class="px-4">
-            <h1 class="text-center pb-4 leading-[1.27]">Welcome to <span class="text-transparent bg-clip-text bg-gradient-to-b from-primary to-secondary-red">oNote</span> documentation</h1>
+            <h1 class="text-center pb-4 leading-[1.27]">Welcome to <span class="text-transparent bg-clip-text bg-gradient-to-b from-stack-brand-700 via-stack-brand-500 to-stack-brand-300">Evident Stack</span> documentation</h1>
             <p class="text-center text-body-1 text-[18px]">To get started, take the <a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL 'ui-tour.adoc')}}}">comprehensive tour</a>.</p>
         </div>
         <div class="my-16">
-            <p class="pl-4 mb-2">Get started with oNote</p>
+            <p class="pl-4 mb-2 text-body-1">Get started with Evident Design</p>
             <div class="grid lg:grid-cols-11 px-4">
                 <div class="w-full lg:col-span-3 mx-auto">
                     <div class="border border-border-light shadow-md rounded-md p-4">
@@ -60,7 +60,7 @@
                             </ul>
                         </div>
                     </div>
-                </div>  
+                </div>
             </div>
         </div>
     </main>
