--- a/src/partials/body.hbs
+++ b/src/partials/body.hbs
@@ -1,6 +1,6 @@
 <script>
-  window.onload = function() { 
-    var element = document.getElementById("onoteUserGuide");
+  window.onload = function() {
+    var element = document.getElementById("evidentStackUserGuide");
     element.classList.add("active");
 }
 </script>
