--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -1,73 +1,78 @@
 <footer class="footer border-t border-border-light bg-black dark:bg-white bg-opacity-[4%] dark:bg-opacity-[4%] py-[60px]">
-  <div class="max-w-[1200px] container mx-auto py-[60px]">    
+  <div class="max-w-[1200px] container mx-auto py-[60px]">
       <div class="flex md:flex-row">
         <div class="hidden md:block md:w-1/4 w-auto">
             <!-- Brand -->
-            <a href="https://onote.com/" class="flex min-w-[103.26px]">
-                <span class="sr-only">oNote</span>
-                <img class="h-[25px] ml-4" src="{{{uiRootPath}}}/img/onoteLogo.svg" alt="oNote" height="32">
+            <a href="https://evidentstack.com/" class="flex min-w-[103.26px]">
+                <span class="sr-only">Evicent Stack</span>
+                <img class="h-[25px] ml-4" src="{{{uiRootPath}}}/img/evidentDesignLogo.svg" alt="Evident Design" height="32">
             </a>
         </div>
         <div class="md:w-3/4 w-auto px-4">
           <div class="grid sm:grid-cols-3 grid-cols-2 gap-4">
               <!-- Footer Menu -->
               <div class="px-4">
-                <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Why oNote?</div>                                                                 
+                {{!-- <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Why Evident Stack?</div> --}}
                 <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-77 menu-item-has-children ">
-                  <a href="https://onote.com/features/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-111 menu-item-has-children">
+                  <a href="https://evidentstack.com/features/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-111 menu-item-has-children">
                       Features
                   </a>
                 </div>
                 {{!-- <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-77 menu-item-has-children ">
-                  <a href="https://onote.com/use-cases" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-custom menu-item-object-custom menu-item-75 menu-item-has-children">
+                  <a href="https://evidentstack.com/use-cases" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-custom menu-item-object-custom menu-item-75 menu-item-has-children">
                       Use Cases
                   </a>
                 </div> --}}
               </div>
-                          
-              {{!-- <a href="docs.onote.com" class="no-underline p-4 text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out ">
+
+              {{!-- <a href="docs.evidentstack.com" class="no-underline p-4 text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out ">
                   Docs
               </a> --}}
               <div class="px-4">
-                <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Learn</div>                                                                
+                <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Learn</div>
                 <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-78 menu-item-has-children ">
-                  <a href="https://onote.com//blog/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-183">
+                  <a href="https://evidentstack.com//blog/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-183">
                       Blog
                   </a>
                 </div>
                 <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-78 menu-item-has-children ">
-                  <a href="https://onote.com//conferences/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-274">
+                  <a href="https://evidentstack.com//webinars/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-183">
+                      Webinars
+                  </a>
+                </div>
+                <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-78 menu-item-has-children ">
+                  <a href="https://evidentstack.com//conferences/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-274">
                       Conferences
                   </a>
                 </div>
               </div>
-                          
+
               <div class="px-4">
-                <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Service &amp; Support</div>                                                                   
+                <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Service &amp; Support</div>
                 {{!-- <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-79 menu-item-has-children ">
-                  <a href="https://onote.com/faq/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-224">
+                  <a href="https://evidentstack.com/faq/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-224">
                       FAQ
                   </a>
                 </div> --}}
                 <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-79 menu-item-has-children ">
-                  <a href="https://support.onote.com/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-custom menu-item-object-custom menu-item-270">
+                  <a href="https://support.evidentstack.com/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-custom menu-item-object-custom menu-item-270">
                       Support
                   </a>
                 </div>
-            </div>                         
+            </div>
             <div class="px-4">
               <div class="pb-2 w-full border-b border-body-light dark:border-border-dark text-sm font-bold text-body-1 dark:text-body-4 ">Company</div>
               <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-80 menu-item-has-children ">
-                <a href="https://onote.com/team/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-61">
+                <a href="https://evidentstack.com/team/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-61">
                     Team
                 </a>
               </div>
               <div class="w-full py-2  menu-item menu-item-type-custom menu-item-object-custom menu-item-80 menu-item-has-children ">
-                <a href="https://onote.com/contact/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-265">
+                <a href="https://evidentstack.com/contact/" class="no-underline text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out  menu-item menu-item-type-post_type menu-item-object-page menu-item-265">
                     Contact
                 </a>
               </div>
-            </div>                         
+            </div>
           </div>
         </div>
       </div>
@@ -75,11 +80,11 @@
       <!--MUST KEEP THESE LINKS UPDATED ALWAYS-->
       <section class="mt-16">
           <div class="text-center">
-              <a href="https://onote.com//privacy-policy" class="no-underline py-4 px-1 text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out">
+              <a href="https://evidentstack.com//privacy-policy" class="no-underline py-4 px-1 text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out">
                   Privacy
               </a>
               <span class="py-4 text-sm text-body-1 dark:text-body-4">|</span>
-              <a href="https://onote.com//terms-and-conditions" class="no-underline py-4 px-1text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out">
+              <a href="https://evidentstack.com//terms-and-conditions" class="no-underline py-4 px-1text-sm text-body-1 hover:text-body-4 dark:text-body-4 dark:hover:text-body-1 transition duration-300 ease-in-out">
                   Terms of Service
               </a>
           </div>
