--- a/src/partials/head-styles.hbs
+++ b/src/partials/head-styles.hbs
@@ -1,5 +1,5 @@
     <link rel="stylesheet" href="{{{uiRootPath}}}/css/site.css">
-    <link rel="stylesheet" href="https://use.typekit.net/xxv0hnj.css">              
+    <link rel="stylesheet" href="https://use.typekit.net/dcj2uau.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="{{{uiRootPath}}}/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="{{{uiRootPath}}}/img/favicon/favicon-32x32.png">
